# introduction-a-rust

./: .gitignore  Cargo.toml  README.md  index.html  pokemons.json  presentation.md
examples/: README.md  anyhow_result.rs  custom_error.rs  result.rs
src/: lib.rs  pokemon.rs
